styling: fix sidebar alignments

--- a/src/components/InformationBite/InformationBite.css
+++ b/src/components/InformationBite/InformationBite.css
@@ -13,7 +13,7 @@
   align-items: center;
   font-size: 20px;
 
-  color: white;
+  color: var(--primary);
   border-radius: 10px;
   background: var(--bg-gradient);
   z-index: 0;
